<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_bright"
    tools:context=".MainActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="@color/bg_screen1">

            </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="151dp"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="@color/bg_screen1">


                    <ImageView
                        android:layout_width="198dp"
                        android:layout_height="136dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_tempat5" />


                    <TextView
                        android:layout_width="103dp"
                        android:layout_height="82dp"
                        android:layout_gravity="end"
                        android:text="@string/place1"
                        android:textColor="@android:color/white"
                        android:textSize="31sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="79dp"
                        android:layout_gravity="bottom"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="200dp"
                            android:layout_height="59dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/wass"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:paddingTop="50dp"
                android:layout_marginTop="181dp"
                android:adjustViewBounds="true"
                android:backgroundTint="@android:color/holo_green_light">


                <ImageView
                    android:layout_width="198dp"
                    android:layout_height="136dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_tempat3" />


                <TextView
                    android:layout_width="103dp"
                    android:layout_height="82dp"
                    android:layout_gravity="end"
                    android:text="@string/place2"
                    android:textColor="@android:color/white"
                    android:textSize="31sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:layout_gravity="bottom"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/wass1"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/v_flipper"
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:layout_marginTop="342dp"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/bg_screen1">


                <ImageView
                    android:layout_width="198dp"
                    android:layout_height="136dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_tempat4" />


                <TextView
                    android:layout_width="103dp"
                    android:layout_height="82dp"
                    android:layout_gravity="end"
                    android:text="@string/place3"
                    android:textColor="@android:color/white"
                    android:textSize="31sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:layout_gravity="bottom"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/wass2"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>
                </LinearLayout>


            </android.support.v7.widget.CardView>


</RelativeLayout>