<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:backgroundTint="@color/bg_screen1"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="25dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:backgroundTint="@color/bg_screen1">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/text2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="PROFIL"
                android:textColor="@android:color/white"
                android:textSize="27dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/bg_screen1"
                android:src="@drawable/ic_cat2" />

        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:backgroundTint="@color/bg_screen2"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="247dp"
                android:layout_height="200dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg_screen2"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="111dp"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_food"
                        android:onClick="food"/>

                    <Button
                        android:id="@+id/food"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:autoSizeTextType="uniform"
                        android:background="@null"
                        android:text="@string/Food"
                        android:textColor="@android:color/white" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="247dp"
                android:layout_height="200dp"
                android:layout_gravity="right"
                android:layout_weight="3"
                android:backgroundTint="@color/bg_screen3"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="127dp"
                    android:layout_height="161dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="111dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_wisata"
                        android:onClick="place"/>

                    <Button
                        android:id="@+id/btninfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnbuka"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:autoSizeTextType="uniform"
                        android:background="@null"
                        android:text="@string/Place"
                        android:textColor="@android:color/white" />

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="247dp"
                android:layout_height="200dp"
                android:layout_weight="3"
                android:backgroundTint="@android:color/holo_orange_light"
                android:gravity="right"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="111dp"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:tint="@android:color/white"
                        android:src="@drawable/ic_troli"/>

                    <Button
                        android:id="@+id/btn_Troli"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:background="@null"
                        android:text="@string/Troli"
                        android:autoSizeTextType="uniform"
                        android:textColor="@android:color/white" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="247dp"
                android:layout_height="200dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/holo_green_light"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="127dp"
                    android:layout_height="164dp"

                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="111dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_rate"
                        android:onClick="rate"/>

                    <Button
                        android:id="@+id/btn_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:autoSizeTextType="uniform"
                        android:background="@null"
                        android:text="RATE US"
                        android:textColor="@android:color/white" />

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>